# libretro

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: Config.cmake.in
examples/: CMakeLists.txt
examples/opengl_triangle/: CMakeLists.txt  main.cpp  pch.h  triangle.cpp  triangle.h
examples/rectangle_texture/: CMakeLists.txt  main.cpp  pch.h
examples/simple_window/: CMakeLists.txt  main.cpp
examples/sprite_batching/: CMakeLists.txt  main.cpp  pch.h
include/libretro/: config.h  graphics.h  image.h  math.h  tiled.h
include/libretro/graphics/: blend.h  blend_mode.h  export.h  frame_buffer.h  gl.h  matrix4x4.h  matrix4x4_stack.h  render_target.h  render_window.h  renderer.h  resource.h  resource_binder.h  shader.h  shader_program.h  shader_source.h  texture.h  topology.h  vertex.h  vertex.inl  vertex_array.h  vertex_buffer.h  window.h
include/libretro/image/: bitmap.h  bitmap_runtime_error.h  bitmap_runtime_error.inl  color.h  color.inl  colors.h  export.h  pixel.h  pixel.inl
include/libretro/math/: angle.h  circle.h  circle.inl  collide.h  collide.inl  distance.h  distance.inl  line.h  line.inl  matrix3x3.h  matrix3x3.inl  matrix_stack.h  matrix_stack.inl  rect.h  rect.inl  vector2.h  vector2.inl
include/libretro/tiled/: export.h  file.h  tmx.h  tsx.h
src/libretro/: CMakeLists.txt
src/libretro/graphics/: CMakeLists.txt  error.h  gl.cpp  pch.cpp  pch.h  render_target.cpp  render_window.cpp  resource.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
src/libretro/image/: CMakeLists.txt  bitmap.cpp  bitmap.impl.cpp  bitmap.impl.h  pch.cpp  pch.h
src/libretro/math/: CMakeLists.txt
src/libretro/tiled/: CMakeLists.txt  file.cpp  parser.h  pch.h  tmx_parser.h  tsx_parser.h
tests/: CMakeLists.txt
tests/graphics/: CMakeLists.txt  window.test.cpp
tests/image/: CMakeLists.txt  bitmap.test.cpp  color.test.cpp  pixel.test.cpp
tests/math/: CMakeLists.txt  angle.test.cpp  circle.test.cpp  collide.test.cpp  distance.test.cpp  line.test.cpp  main.cpp  matrix3x3.test.cpp  matrix_stack.test.cpp  rect.test.cpp  vector2.test.cpp
tests/tiled/: CMakeLists.txt  tmx.test.cpp  tsx.test.cpp
